explrer refactor (#75)
* Change the pagination param from max_result to size

* change the farms returned data to be list instead of obj

* Move the PublicIps to be a part og farm obj and updates in the node model

* Split the caching

* wrap the error

* change the timeout to be 3 seconds
