# docs/swagger.json
@@ -36,7 +36,7 @@
                     {
                         "type": "integer",
                         "description": "Max result per page",
-                        "name": "max_result",
+                        "name": "size",
                         "in": "query"
                     }
                 ],
@@ -73,7 +73,7 @@
                     {
                         "type": "integer",
                         "description": "Max result per page",
-                        "name": "max_result",
+                        "name": "size",
                         "in": "query"
                     },
                     {
@@ -147,7 +147,7 @@
                     {
                         "type": "integer",
                         "description": "Max result per page",
-                        "name": "max_result",
+                        "name": "size",
                         "in": "query"
                     },
                     {
